Dockerize App; Add dependency lock file

--- a/web/views/errors/404.ejs
+++ b/web/views/errors/404.ejs
@@ -3,14 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>404 - Page not found</title>
     <link rel="stylesheet" href="/style.css">
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 <body>
     <div id="main">
-        Nothing to see here...
+        404 - Page not found!
     </div>
-    <!-- <script src="/dist/app.js"></script> -->
 </body>
 </html>
